--- a/.travis.yml
+++ b/.travis.yml
@@ -5,5 +5,9 @@ python:
 install:
   - pip install -r requirements.txt
 
+before_install:
+  - pip install --upgrade pip
+  - python setup.py install
+
 script:
   - pytest test
